--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15"
 tracing-subscriber = "0.3.22"
+
+[registries.crates-io]
+protocol = "sparse"
