--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,13 +4,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7"
+# Web framework
+axum = { version = "0.7", features = ["macros"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
 tokio = { version = "1", features = ["full"] }
-mongodb = { version = "2.5.0", default-features = false, features = ["tokio-runtime"] }
+tower-http = { version = "0.6", features = ["cors", "trace"] }
+
+# Database
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# Auth
+jsonwebtoken = "9"
+argon2 = "0.5"
+rand = "0.8"
+
+# Utilities
 dotenvy = "0.15"
-tracing-subscriber = "0.3.22"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+chrono = { version = "0.4", features = ["serde"] }
+thiserror = "2"
 
 [registries.crates-io]
 protocol = "sparse"
