New user-approved model
Add configurable resource limit

Fix post-rebase build and formatting issues

   - Fix use-after-move error in main.rs by extracting rate_limit_enabled
     before moving config into AppState
   - Update auth tests to handle new user approval workflow (users now
     start in pending_approval state)
   - Remove unused id field from ApprovalInfo struct
   - Apply cargo fmt to all Rust files

Fixed errors found at runtime

Update CLAUDE.d to avoid running commands in the wrong folder

Fix merge conflicts

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,5 +13,10 @@ PORT=8000
 # Set to true in production for security if port 8000 is directly accessible from the web (not recommended)
 #RATE_LIMIT_ENABLED=true
 
+# Resource Limits
+# Maximum number of projects a user can create (empty or 0 = unlimited)
+# Set this on public instances to prevent resource exhaustion
+# MAX_PROJECTS_PER_USER=3
+
 # Logging
 RUST_LOG=info,bonscompte_backend=debug
