Fix backend clippy analyser issues

--- a/docs/NGINX_PRODUCTION.conf
+++ b/docs/NGINX_PRODUCTION.conf
@@ -43,10 +43,12 @@ server {
     }
 
     # Auth endpoints - strict rate limiting (5 requests per minute, burst 5)
-    location ~ ^/api/auth/(login|register) {
+    # Uses rewrite to strip /api prefix before proxying to backend
+    location ~ ^/api/auth/(login|register)$ {
         limit_req zone=auth_limit burst=5 nodelay;
         limit_req_status 429;
 
+        rewrite ^/api(.*)$ $1 break;
         proxy_pass http://127.0.0.1:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
