Remove rate limits in dev to avoid issues when updating the files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,10 @@ JWT_SECRET=your-secret-key-here
 HOST=0.0.0.0
 PORT=8000
 
+# Rate Limiting
+# Set to false in development to avoid issues with HMR (Hot Module Reload)
+# Set to true in production for security
+RATE_LIMIT_ENABLED=true
+
 # Logging
 RUST_LOG=info,bonscompte_backend=debug
