Improve pre-commit setup and eslint config

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,4 +77,4 @@ jobs:
 
       - name: Run frontend linter
         working-directory: ./frontend
-        run: npm run lint
+        run: npm run format:check
