--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,9 +9,9 @@ HOST=0.0.0.0
 PORT=8000
 
 # Rate Limiting
-# Set to false in development to avoid issues with HMR (Hot Module Reload)
-# Set to true in production for security
-RATE_LIMIT_ENABLED=true
+# Default is `false` to avoid issues with reverse-proxies or in development to avoid issues with HMR (Hot Module Reload)
+# Set to true in production for security if port 8000 is directly accessible from the web (not recommended)
+#RATE_LIMIT_ENABLED=true
 
 # Logging
 RUST_LOG=info,bonscompte_backend=debug
