--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - if: matrix.language == 'rust'
+        uses: dtolnay/rust-toolchain@stable
+
       - uses: github/codeql-action/init@v4
         with:
           languages: ${{ matrix.language }}
