--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -3,14 +3,16 @@
 
 name: "BonsCompte CodeQL Config"
 
-# Exclude admin CLI tool from cleartext logging checks
-# The admin tool intentionally uses println! for console output
+# Exclude CLI utilities from cleartext logging checks
+# These tools intentionally use println! for console output
 paths-ignore:
-  - 'backend/src/admin.rs'
+  - 'backend/src/bin/admin.rs'
+  - 'backend/src/bin/recalculate_contributions.rs'
 
 # You can also use query filters to be more specific:
 # query-filters:
 #   - exclude:
 #       id: rust/cleartext-logging
 #       paths:
-#         - 'backend/src/admin.rs'
+#         - 'backend/src/bin/admin.rs'
+#         - 'backend/src/bin/recalculate_contributions.rs'
