--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,3 +35,25 @@ jobs:
         run: cargo build --release
 
       - uses: github/codeql-action/analyze@v4
+        with:
+          output: sarif-results
+          upload: false
+
+      - name: Filter SARIF for false positives
+        uses: advanced-security/filter-sarif@v1
+        with:
+          patterns: |
+            # Exclude cleartext-logging warnings from CLI tools (intentional console output)
+            -**/**/bin/admin.rs:rust/cleartext-logging
+            -**/**/bin/recalculate_contributions.rs:rust/cleartext-logging
+            # Exclude cleartext-logging for participant IDs (business data, not sensitive)
+            -**/debt_calculator.rs:rust/cleartext-logging
+            # Exclude cleartext-logging for audit trail user IDs (internal identifiers)
+            -**/history.rs:rust/cleartext-logging
+          input: sarif-results/${{ matrix.language }}.sarif
+          output: sarif-results/${{ matrix.language }}.sarif
+
+      - name: Upload filtered SARIF
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: sarif-results/${{ matrix.language }}.sarif
