--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,12 +34,19 @@ jobs:
         working-directory: backend
         run: cargo build --release
 
-      - uses: github/codeql-action/analyze@v4
+      # For TypeScript: analyze and upload directly (no filtering needed)
+      - if: matrix.language == 'typescript'
+        uses: github/codeql-action/analyze@v4
+
+      # For Rust: analyze without upload, filter, then upload
+      - if: matrix.language == 'rust'
+        uses: github/codeql-action/analyze@v4
         with:
           output: sarif-results
           upload: false
 
       - name: Filter SARIF for false positives
+        if: matrix.language == 'rust'
         uses: advanced-security/filter-sarif@v1
         with:
           patterns: |
@@ -54,6 +61,7 @@ jobs:
           output: sarif-results/${{ matrix.language }}.sarif
 
       - name: Upload filtered SARIF
+        if: matrix.language == 'rust'
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: sarif-results/${{ matrix.language }}.sarif
