--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,4 +34,34 @@ jobs:
         working-directory: backend
         run: cargo build --release
 
-      - uses: github/codeql-action/analyze@v4
+      # For TypeScript: analyze and upload directly (no filtering needed)
+      - if: matrix.language == 'typescript'
+        uses: github/codeql-action/analyze@v4
+
+      # For Rust: analyze without upload, filter, then upload
+      - if: matrix.language == 'rust'
+        uses: github/codeql-action/analyze@v4
+        with:
+          output: sarif-results
+          upload: false
+
+      - name: Filter SARIF for false positives
+        if: matrix.language == 'rust'
+        uses: advanced-security/filter-sarif@v1
+        with:
+          patterns: |
+            # Exclude cleartext-logging warnings from CLI tools (intentional console output)
+            -**/**/bin/admin.rs:rust/cleartext-logging
+            -**/**/bin/recalculate_contributions.rs:rust/cleartext-logging
+            # Exclude cleartext-logging for participant IDs (business data, not sensitive)
+            -**/debt_calculator.rs:rust/cleartext-logging
+            # Exclude cleartext-logging for audit trail user IDs (internal identifiers)
+            -**/history.rs:rust/cleartext-logging
+          input: sarif-results/${{ matrix.language }}.sarif
+          output: sarif-results/${{ matrix.language }}.sarif
+
+      - name: Upload filtered SARIF
+        if: matrix.language == 'rust'
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: sarif-results/${{ matrix.language }}.sarif
