--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "@lucide/svelte": "^0.563.1",
+    "@svar-ui/svelte-core": "^2.4.0",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.1.0",
